clap_derive/tests/ui/subcommand_opt_vec.stderr
error: Option<Vec<T>> type is not allowed for subcommand
  --> $DIR/subcommand_opt_vec.rs:17:10
   |
17 |     cmd: Option<Vec<Command>>,
   |          ^^^^^^
